rename default system model/level

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@ newState = state.simulate(0.5, function(s){ return -s.x ;})</pre>
 		
 
 		<script id="userscript"></script>
-		<script src="js/models/BlockOnSlope.js"></script>
+		<script src="js/models/Example.js"></script>
 
-		<script src="js/levels/TutorialBlockWithFriction.js"></script>
+		<script src="js/levels/Example.js"></script>
 
 		<script src="js/ImageDataCache.js"></script>
 		<script src="js/utils.js"></script>
