--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<button id="shareButton"       type="button" title="Share"><span class="glyphicon glyphicon-share"> </span></button>
 				<pre id="variableInfo"></pre>
 			</div>
-			<canvas id="cas"></canvas>
+			<div id="cas"></div>
 		</div>
 		
 		<div id="levelStartPopup" class="popup">
@@ -95,7 +95,7 @@ newState = state.simulate(0.5, function(s){ return -s.x ;})</pre>
 		<script src="js/codemirror/matchbrackets.js"></script>
 		<script src="js/bootstrap.js"></script>	
 		<script src="js/shortcut.js"></script>
-		
+		<script src="js/d3.v4.js"></script>
 
 		<script id="userscript"></script>
 		<script src="js/models/Example.js"></script>
